soup/quarkus/deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: blast-quarkus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quarkus-blast-app
  template:
    metadata:
      labels:
        app: quarkus-blast-app
    spec:
      containers:
        - name: blast-quarkus
          image: blast-quarkus:latest
          ports:
            - name: http
              containerPort: 8081
              protocol: TCP
          resources:
            requests:
              memory: "100Mi"
              cpu: "10m"
---
kind: Service
apiVersion: v1
metadata:
  name: blast-quarkus
spec:
ports:
  - name: http-8081
    port: 8081
    protocol: TCP
    targetPort: 8081
selector:
  app: quarkus-blast-app
